CVSL-1165: Fix spacing between out of bounds premises conditions on the check answers page.

--- a/assets/sass/components/_summary-table-override.scss
+++ b/assets/sass/components/_summary-table-override.scss
@@ -16,3 +16,7 @@
     }
   }
 }
+
+.additional-condition-summary:nth-child(n+2) {
+  margin-top: govuk-spacing(7);
+}
